build: optimized dockerfile