@@ -1,4 +1,27 @@
-FROM openjdk:23-jdk
+# First stage, build the custom JRE
+FROM eclipse-temurin:23-jdk-alpine AS jre-builder
+
+# Install binutils, required by jlink
+RUN apk update &&  \
+    apk add binutils
+
+# Build small JRE image
+RUN $JAVA_HOME/bin/jlink \
+--verbose \
+--add-modules ALL-MODULE-PATH \
+--strip-debug \
+--no-man-pages \
+--no-header-files \
+--compress=2 \
+--output /optimized-jdk-23
+
+# Second stage, Use the custom JRE and build the app image
+FROM alpine:latest
+ENV JAVA_HOME=/opt/jdk/jdk-23
+ENV PATH="${JAVA_HOME}/bin:${PATH}"
+
+# copy JRE from the base image
+COPY --from=jre-builder /optimized-jdk-23 $JAVA_HOME
 
 # Set the working directory in the container
 WORKDIR /app
